--- a/colab_ready.ipynb
+++ b/colab_ready.ipynb
@@ -44,6 +44,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Re-clone Repository (if updating code)\n",
+    "Run this cell if you need to re-clone with updated code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd /content\n",
+    "!rm -rf GazeGaussian\n",
+    "!git clone --recursive https://github.com/kram254/GazeGaussian.git\n",
+    "%cd GazeGaussian\n",
+    "!git submodule update --init --recursive\n",
+    "print(\"✓ Repository re-cloned with latest code\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -425,6 +447,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Create Custom Config for Your Dataset\n",
+    "Your data uses `xgaze_` prefix and different subject numbers. This cell creates a matching config."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from pathlib import Path\n",
+    "\n",
+    "data_dir = Path(\"/content/drive/MyDrive/GazeGaussian_data/ETH-XGaze_test/ETH-XGaze_test\")\n",
+    "h5_files = sorted([f.name for f in data_dir.glob(\"*.h5\")])\n",
+    "\n",
+    "print(f\"Found {len(h5_files)} HDF5 files:\\n{h5_files}\")\n",
+    "\n",
+    "train_split = int(len(h5_files) * 0.8)\n",
+    "train_files = h5_files[:train_split]\n",
+    "val_files = h5_files[train_split:]\n",
+    "\n",
+    "custom_config = {\n",
+    "    \"train\": train_files,\n",
+    "    \"val\": val_files,\n",
+    "    \"val_gaze\": val_files,\n",
+    "    \"test\": [],\n",
+    "    \"test_specific\": []\n",
+    "}\n",
+    "\n",
+    "config_path = \"/content/GazeGaussian/configs/dataset/eth_xgaze/train_test_split.json\"\n",
+    "with open(config_path, 'w') as f:\n",
+    "    json.dump(custom_config, f, indent=2)\n",
+    "\n",
+    "print(f\"\\n✓ Updated config at: {config_path}\")\n",
+    "print(f\"  - Training files: {len(train_files)}\")\n",
+    "print(f\"  - Validation files: {len(val_files)}\")\n",
+    "print(f\"\\nFirst 5 training files: {train_files[:5]}\")\n",
+    "print(f\"Validation files: {val_files}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Optional: Upload/Download Data\n",
     "Uncomment and modify the commands below based on your data source."
    ]
@@ -563,37 +630,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "import h5py\n",
+    "from pathlib import Path\n",
     "\n",
-    "drive_data = \"/content/drive/MyDrive/GazeGaussian_data\"\n",
-    "project_data = \"/content/GazeGaussian/data\"\n",
+    "data_dir = Path(\"/content/drive/MyDrive/GazeGaussian_data\")\n",
+    "h5_files = list(data_dir.rglob(\"*.h5\"))\n",
     "\n",
-    "if os.path.exists(drive_data):\n",
-    "    if not os.path.exists(project_data):\n",
-    "        os.symlink(drive_data, project_data)\n",
-    "        print(f\"✓ Created symlink: {project_data} -> {drive_data}\")\n",
-    "    else:\n",
-    "        print(f\"✓ Data already linked at: {project_data}\")\n",
-    "    \n",
-    "    print(\"\\n\" + \"=\"*80)\n",
-    "    print(\"TRAINING COMMANDS WITH YOUR DATA\")\n",
-    "    print(\"=\"*80)\n",
-    "    print(\"\\n1. Train MeshHead:\")\n",
-    "    print(f\"   python train_meshhead.py \\\\\")\n",
-    "    print(f\"       --img_dir {drive_data}/ETH-XGaze_test/ETH-XGaze_test \\\\\")\n",
-    "    print(f\"       --checkpoint_path /content/drive/MyDrive/GazeGaussian_checkpoints/meshhead\")\n",
-    "    \n",
-    "    print(\"\\n2. Train GazeGaussian:\")\n",
-    "    print(f\"   python train.py \\\\\")\n",
-    "    print(f\"       -s {drive_data}/ETH-XGaze_test \\\\\")\n",
-    "    print(f\"       -m /content/drive/MyDrive/GazeGaussian_checkpoints/model\")\n",
-    "    \n",
-    "    print(\"\\n\" + \"=\"*80)\n",
-    "    print(\"💡 Tip: Adjust paths above based on your actual dataset structure\")\n",
-    "    print(\"=\"*80)\n",
-    "else:\n",
-    "    print(f\"❌ Data not found at: {drive_data}\")\n",
-    "    print(\"   Please ensure Google Drive is mounted and data is uploaded.\")"
+    "print(\"=\"*80)\n",
+    "print(\"📊 COMPLETE DATASET SUMMARY\")\n",
+    "print(\"=\"*80)\n",
+    "\n",
+    "total_images = 0\n",
+    "sample_file = h5_files[0] if h5_files else None\n",
+    "\n",
+    "if sample_file:\n",
+    "    with h5py.File(sample_file, 'r') as f:\n",
+    "        images_per_file = len(f['face_patch'])\n",
+    "        total_images = len(h5_files) * images_per_file\n",
+    "        img_shape = f['face_patch'][0].shape\n",
+    "\n",
+    "print(f\"\\n📁 Dataset Location: {data_dir}\")\n",
+    "print(f\"📦 Total HDF5 Files: {len(h5_files)}\")\n",
+    "print(f\"🖼️  Images per File: {images_per_file if sample_file else 'N/A'}\")\n",
+    "print(f\"📸 Total Images: {total_images:,}\")\n",
+    "print(f\"📐 Image Resolution: {img_shape if sample_file else 'N/A'}\")\n",
+    "\n",
+    "if sample_file:\n",
+    "    with h5py.File(sample_file, 'r') as f:\n",
+    "        print(f\"\\n✅ Available Data Fields:\")\n",
+    "        print(f\"   • Face Images: face_patch [{f['face_patch'].shape}]\")\n",
+    "        print(f\"   • Gaze Labels: pitchyaw [{f['pitchyaw'].shape}]\")\n",
+    "        print(f\"   • 3D Vertices: vertice [{f['vertice'].shape}]\")\n",
+    "        print(f\"   • Camera Intrinsics: inmat [{f['inmat'].shape}]\")\n",
+    "        print(f\"   • Camera Extrinsics: c2w_Rmat, c2w_Tvec\")\n",
+    "        print(f\"   • Head Masks: head_mask [{f['head_mask'].shape}]\")\n",
+    "        print(f\"   • Eye Masks: left_eye_mask, right_eye_mask\")\n",
+    "        print(f\"   • Facial Landmarks: facial_landmarks [{f['facial_landmarks'].shape}]\")\n",
+    "        print(f\"   • Latent Codes: latent_codes [{f['latent_codes'].shape}]\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*80)\n",
+    "print(\"🚀 READY TO TRAIN!\")\n",
+    "print(\"=\"*80)\n",
+    "\n",
+    "print(\"\\n📝 IMPORTANT: Run Cell 28 first to create the config matching your data!\")\n",
+    "print(\"\\nThen run this training command:\")\n",
+    "print(\"\\n# For MeshHead training:\")\n",
+    "print(\"!cd /content/GazeGaussian && python train_meshhead.py \\\\\")\n",
+    "print(f\"    --img_dir /content/drive/MyDrive/GazeGaussian_data/ETH-XGaze_test/ETH-XGaze_test \\\\\")\n",
+    "print(f\"    --checkpoint_path /content/drive/MyDrive/GazeGaussian_checkpoints/meshhead \\\\\")\n",
+    "print(f\"    --num_epochs 5\")\n",
+    "\n",
+    "print(\"\\n# For GazeGaussian training:\")\n",
+    "print(\"!cd /content/GazeGaussian && python train.py \\\\\")\n",
+    "print(f\"    -s /content/drive/MyDrive/GazeGaussian_data/ETH-XGaze_test \\\\\")\n",
+    "print(f\"    -m /content/drive/MyDrive/GazeGaussian_checkpoints/model \\\\\")\n",
+    "print(f\"    --iterations 10000\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*80)\n",
+    "print(\"⚠️  WORKFLOW:\")\n",
+    "print(\"   1. Run Cell 28 to create custom config for your dataset\")\n",
+    "print(\"   2. Run the training command above\")\n",
+    "print(\"=\"*80)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🚀 Start Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cd /content/GazeGaussian && python train_meshhead.py \\\n",
+    "    --img_dir /content/drive/MyDrive/GazeGaussian_data/ETH-XGaze_test/ETH-XGaze_test \\\n",
+    "    --checkpoint_path /content/drive/MyDrive/GazeGaussian_checkpoints/meshhead \\\n",
+    "    --num_epochs 5"
    ]
   },
   {
