--- a/colab_ready.ipynb
+++ b/colab_ready.ipynb
@@ -990,9 +990,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "from pathlib import Path\n",
+    "\n",
+    "data_dir = Path(\"/content/drive/MyDrive/GazeGaussian_data/ETH-XGaze_test/ETH-XGaze_test\")\n",
+    "h5_files = sorted([f.name for f in data_dir.glob(\"*.h5\")])\n",
+    "\n",
+    "print(f\"Found {len(h5_files)} HDF5 files\")\n",
+    "print(f\"First 5 files: {h5_files[:5]}\")\n",
+    "\n",
+    "if not h5_files:\n",
+    "    print(\"\\n❌ No .h5 files found! Please check your data path.\")\n",
+    "else:\n",
+    "    train_split = int(len(h5_files) * 0.8)\n",
+    "    train_files = h5_files[:train_split]\n",
+    "    val_files = h5_files[train_split:]\n",
+    "\n",
+    "    custom_config = {\n",
+    "        \"train\": train_files,\n",
+    "        \"val\": val_files,\n",
+    "        \"val_gaze\": val_files,\n",
+    "        \"test\": [],\n",
+    "        \"test_specific\": []\n",
+    "    }\n",
+    "\n",
+    "    config_path = \"/content/GazeGaussian/configs/dataset/eth_xgaze/train_test_split.json\"\n",
+    "    with open(config_path, 'w') as f:\n",
+    "        json.dump(custom_config, f, indent=2)\n",
+    "\n",
+    "    print(f\"\\n✓ Updated config at: {config_path}\")\n",
+    "    print(f\"  - Training files: {len(train_files)}\")\n",
+    "    print(f\"  - Validation files: {len(val_files)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!cd /content/GazeGaussian && python train_meshhead.py \\\n",
     "    --img_dir /content/drive/MyDrive/GazeGaussian_data/ETH-XGaze_test/ETH-XGaze_test \\\n",
-    "    --checkpoint_path /content/drive/MyDrive/GazeGaussian_checkpoints/meshhead \\\n",
     "    --num_epochs 50 \\\n",
     "    --early_stopping \\\n",
     "    --patience 5"
