--- a/colab_ready.ipynb
+++ b/colab_ready.ipynb
@@ -825,7 +825,37 @@
     "!rm -rf GazeGaussian\n",
     "!git clone --recursive https://github.com/kram254/GazeGaussian.git\n",
     "%cd GazeGaussian\n",
-    "!git submodule update --init --recursive"
+    "!git submodule update --init --recursive\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "train_file = \"/content/GazeGaussian/train_meshhead.py\"\n",
+    "if os.path.exists(train_file):\n",
+    "    with open(train_file, 'r') as f:\n",
+    "        content = f.read()\n",
+    "    \n",
+    "    if 'evaluate=\"landmark\"' in content:\n",
+    "        content = content.replace('evaluate=\"landmark\"', 'evaluate=None')\n",
+    "        with open(train_file, 'w') as f:\n",
+    "            f.write(content)\n",
+    "        print(\"✓ Patched train_meshhead.py to use evaluate=None\")\n",
+    "    else:\n",
+    "        print(\"✓ train_meshhead.py already uses evaluate=None\")\n",
+    "\n",
+    "dataloader_file = \"/content/GazeGaussian/dataloader/eth_xgaze.py\"\n",
+    "if os.path.exists(dataloader_file):\n",
+    "    with open(dataloader_file, 'r') as f:\n",
+    "        content = f.read()\n",
+    "    \n",
+    "    if 'return \"xgaze_\"' in content:\n",
+    "        content = content.replace('return \"xgaze_\"', 'return \"\"')\n",
+    "        with open(dataloader_file, 'w') as f:\n",
+    "            f.write(content)\n",
+    "        print(\"✓ Patched eth_xgaze.py to remove xgaze_ prefix\")\n",
+    "    else:\n",
+    "        print(\"✓ eth_xgaze.py already has empty prefix\")\n",
+    "\n",
+    "print(\"\\n✅ Repository cloned and patched successfully!\")"
    ]
   },
   {
@@ -982,6 +1012,27 @@
     "    print(\"   Ready for MeshHead and GazeGaussian training!\")\n",
     "else:\n",
     "    print(\"\\n⚠ Some packages failed. Check errors above and rerun failed installations.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "\n",
+    "config_files_dir = \"/content/GazeGaussian/configs/config_files\"\n",
+    "os.makedirs(config_files_dir, exist_ok=True)\n",
+    "\n",
+    "dummy_file = os.path.join(config_files_dir, \"evaluation_target_single_subject.txt\")\n",
+    "if not os.path.exists(dummy_file):\n",
+    "    dummy_data = np.arange(0, 1000)\n",
+    "    np.savetxt(dummy_file, dummy_data, fmt='%d')\n",
+    "    print(f\"✓ Created dummy evaluation file at {dummy_file}\")\n",
+    "else:\n",
+    "    print(f\"✓ Evaluation file already exists\")"
    ]
   },
   {
