--- a/colab_2step_training.ipynb
+++ b/colab_2step_training.ipynb
@@ -65,6 +65,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 2A. ALTERNATIVE: Install Optuna for Automated Training (Optional)\n",
+    "\n",
+    "If you want to use automated hyperparameter optimization instead of manual training, install Optuna:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install optuna optuna-dashboard plotly kaleido"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2. Install Dependencies"
    ]
   },
@@ -259,6 +277,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6A. ALTERNATIVE: Train MeshHead with Optuna Optimization\n",
+    "\n",
+    "This will automatically search for the best hyperparameters (learning rate, MLP sizes, etc.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd /content/GazeGaussian\n",
+    "\n",
+    "!python train_meshhead_optuna.py \\\n",
+    "    --batch_size 1 \\\n",
+    "    --name 'meshhead' \\\n",
+    "    --img_dir '/content/drive/MyDrive/GazeGaussian_data/ETH-XGaze/train' \\\n",
+    "    --num_epochs 10 \\\n",
+    "    --num_workers 2 \\\n",
+    "    --early_stopping \\\n",
+    "    --patience 5 \\\n",
+    "    --dataset_name 'eth_xgaze' \\\n",
+    "    --n_trials 15 \\\n",
+    "    --study_name 'meshhead_optuna' \\\n",
+    "    --optuna_storage 'sqlite:///meshhead_optuna.db'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -380,6 +429,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 9A. ALTERNATIVE: Train GazeGaussian with Optuna Optimization\n",
+    "\n",
+    "This will automatically search for the best hyperparameters (learning rate, DiT depth/heads/patch size, loss weights, etc.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd /content/GazeGaussian\n",
+    "\n",
+    "with open('/content/meshhead_checkpoint.txt', 'r') as f:\n",
+    "    meshhead_checkpoint = f.read().strip()\n",
+    "\n",
+    "print(f\"Loading MeshHead from: {meshhead_checkpoint}\")\n",
+    "\n",
+    "!python train_gazegaussian_optuna.py \\\n",
+    "    --batch_size 1 \\\n",
+    "    --name 'gazegaussian_dit' \\\n",
+    "    --img_dir '/content/drive/MyDrive/GazeGaussian_data/ETH-XGaze/train' \\\n",
+    "    --num_epochs 30 \\\n",
+    "    --num_workers 2 \\\n",
+    "    --clip_grad \\\n",
+    "    --load_meshhead_checkpoint {meshhead_checkpoint} \\\n",
+    "    --dataset_name 'eth_xgaze' \\\n",
+    "    --n_trials 20 \\\n",
+    "    --study_name 'gazegaussian_optuna' \\\n",
+    "    --optuna_storage 'sqlite:///gazegaussian_optuna.db'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 10. Verify Final Checkpoint"
    ]
   },
@@ -403,6 +488,133 @@
     "    print(\"✓ Saved to Drive: gazegaussian_dit_final.pth\")\n",
     "else:\n",
     "    print(\"❌ No GazeGaussian checkpoint found! Training may have failed.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 12. Analyze Optuna Results (If Using Optuna)\n",
+    "\n",
+    "View optimization history, parameter importance, and best hyperparameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import optuna\n",
+    "import optuna.visualization as vis\n",
+    "from IPython.display import display, HTML\n",
+    "import json\n",
+    "\n",
+    "study_path = 'sqlite:///gazegaussian_optuna.db'\n",
+    "study_name = 'gazegaussian_optuna'\n",
+    "\n",
+    "try:\n",
+    "    study = optuna.load_study(study_name=study_name, storage=study_path)\n",
+    "    \n",
+    "    print(\"=\"*80)\n",
+    "    print(\"OPTUNA OPTIMIZATION RESULTS\")\n",
+    "    print(\"=\"*80)\n",
+    "    print(f\"\\nTotal trials: {len(study.trials)}\")\n",
+    "    print(f\"Best trial: {study.best_trial.number}\")\n",
+    "    print(f\"Best validation loss: {study.best_trial.value:.6f}\")\n",
+    "    \n",
+    "    print(f\"\\n{'='*80}\")\n",
+    "    print(\"BEST HYPERPARAMETERS:\")\n",
+    "    print(\"=\"*80)\n",
+    "    for key, value in study.best_trial.params.items():\n",
+    "        print(f\"  {key:35s}: {value}\")\n",
+    "    \n",
+    "    print(f\"\\n{'='*80}\")\n",
+    "    print(\"VISUALIZATIONS:\")\n",
+    "    print(\"=\"*80)\n",
+    "    \n",
+    "    print(\"\\n1. Optimization History\")\n",
+    "    fig = vis.plot_optimization_history(study)\n",
+    "    fig.show()\n",
+    "    \n",
+    "    print(\"\\n2. Parameter Importances\")\n",
+    "    fig = vis.plot_param_importances(study)\n",
+    "    fig.show()\n",
+    "    \n",
+    "    print(\"\\n3. Parallel Coordinate Plot\")\n",
+    "    fig = vis.plot_parallel_coordinate(study)\n",
+    "    fig.show()\n",
+    "    \n",
+    "    print(\"\\n4. Slice Plot\")\n",
+    "    fig = vis.plot_slice(study)\n",
+    "    fig.show()\n",
+    "    \n",
+    "    print(\"\\n5. Contour Plot (Learning Rate vs DiT Depth)\")\n",
+    "    fig = vis.plot_contour(study, params=['lr', 'dit_depth'])\n",
+    "    fig.show()\n",
+    "    \n",
+    "    with open('/content/best_hyperparameters.json', 'w') as f:\n",
+    "        json.dump(study.best_trial.params, f, indent=2)\n",
+    "    print(f\"\\n✓ Saved best hyperparameters to: /content/best_hyperparameters.json\")\n",
+    "    \n",
+    "    best_checkpoint = f\"/content/GazeGaussian/work_dirs/gazegaussian_dit_trial_{study.best_trial.number}/checkpoints\"\n",
+    "    print(f\"\\n✓ Best checkpoint directory:\")\n",
+    "    print(f\"  {best_checkpoint}\")\n",
+    "    \n",
+    "    !cp -r {best_checkpoint}/*.pth /content/drive/MyDrive/gazegaussian_optuna_best.pth\n",
+    "    print(f\"\\n✓ Copied best checkpoint to Google Drive!\")\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Error loading study: {str(e)}\")\n",
+    "    print(\"\\nMake sure you ran the Optuna training first!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 13. Launch Optuna Dashboard (Optional)\n",
+    "\n",
+    "View interactive dashboard for real-time monitoring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install pyngrok\n",
+    "\n",
+    "from pyngrok import ngrok\n",
+    "import threading\n",
+    "import subprocess\n",
+    "\n",
+    "ngrok.set_auth_token(\"YOUR_NGROK_TOKEN\")\n",
+    "\n",
+    "port = 8080\n",
+    "public_url = ngrok.connect(port)\n",
+    "\n",
+    "print(f\"=\"*80)\n",
+    "print(\"OPTUNA DASHBOARD\")\n",
+    "print(f\"=\"*80)\n",
+    "print(f\"Dashboard URL: {public_url}\")\n",
+    "print(f\"\\nOpen this URL in your browser to view the interactive dashboard\")\n",
+    "print(f\"=\"*80)\n",
+    "\n",
+    "def run_dashboard():\n",
+    "    subprocess.run([\n",
+    "        \"optuna-dashboard\",\n",
+    "        \"sqlite:///gazegaussian_optuna.db\",\n",
+    "        \"--port\", str(port),\n",
+    "        \"--host\", \"0.0.0.0\"\n",
+    "    ])\n",
+    "\n",
+    "thread = threading.Thread(target=run_dashboard, daemon=True)\n",
+    "thread.start()\n",
+    "\n",
+    "print(\"\\n✓ Dashboard is now running!\")\n",
+    "print(\"⚠️  Keep this cell running to maintain the dashboard connection\")"
    ]
   },
   {
