--- a/colab_ready.ipynb
+++ b/colab_ready.ipynb
@@ -238,6 +238,120 @@
     "    --early_stopping \\\n",
     "    --patience 5"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "import torchvision.utils as vutils\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "from configs.gazegaussian_options import BaseOptions\n",
+    "from models.gaze_gaussian import GazeGaussianNet\n",
+    "from dataloader.eth_xgaze import get_val_loader\n",
+    "\n",
+    "def save_image_grid(images, save_path, nrow=4):\n",
+    "    grid = vutils.make_grid(images, nrow=nrow, normalize=True, value_range=(-1, 1))\n",
+    "    grid_np = grid.cpu().numpy().transpose(1, 2, 0)\n",
+    "    grid_np = np.clip((grid_np * 0.5 + 0.5) * 255, 0, 255).astype(np.uint8)\n",
+    "    Image.fromarray(grid_np).save(save_path)\n",
+    "    return grid_np\n",
+    "\n",
+    "checkpoint_path = \"/content/drive/MyDrive/GazeGaussian_checkpoints/gazegaussian_ckp.pth\"\n",
+    "data_dir = \"/content/drive/MyDrive/GazeGaussian_data/ETH-XGaze_test/ETH-XGaze_test\"\n",
+    "output_dir = \"/content/test_outputs\"\n",
+    "num_samples = 5\n",
+    "\n",
+    "print(\"=\"*80)\n",
+    "print(\"TESTING CHECKPOINT\")\n",
+    "print(\"=\"*80)\n",
+    "\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
+    "\n",
+    "print(f\"\\n[1/4] Loading checkpoint...\")\n",
+    "checkpoint = torch.load(checkpoint_path, map_location='cuda')\n",
+    "print(f\"✓ Checkpoint loaded\")\n",
+    "\n",
+    "print(f\"\\n[2/4] Initializing model...\")\n",
+    "opt = BaseOptions()\n",
+    "\n",
+    "try:\n",
+    "    if isinstance(checkpoint, dict) and 'model_state_dict' in checkpoint:\n",
+    "        state_dict = checkpoint['model_state_dict']\n",
+    "    elif isinstance(checkpoint, dict):\n",
+    "        state_dict = checkpoint\n",
+    "    else:\n",
+    "        state_dict = None\n",
+    "    \n",
+    "    model = GazeGaussianNet(opt, load_state_dict=state_dict)\n",
+    "    model = model.cuda()\n",
+    "    model.eval()\n",
+    "    print(f\"✓ Model initialized\")\n",
+    "    print(f\"  Renderer type: {type(model.neural_render).__name__}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"✗ Error: {e}\")\n",
+    "    raise\n",
+    "\n",
+    "print(f\"\\n[3/4] Loading validation data...\")\n",
+    "opt.img_dir = data_dir\n",
+    "val_loader = get_val_loader(opt, data_dir=data_dir, batch_size=1, num_workers=0, evaluate=None, dataset_name='eth_xgaze')\n",
+    "print(f\"✓ Data loaded ({len(val_loader.dataset)} samples)\")\n",
+    "\n",
+    "print(f\"\\n[4/4] Generating {num_samples} images...\")\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for idx, data in enumerate(tqdm(val_loader, total=num_samples)):\n",
+    "        if idx >= num_samples:\n",
+    "            break\n",
+    "        \n",
+    "        try:\n",
+    "            for key in data:\n",
+    "                if isinstance(data[key], torch.Tensor):\n",
+    "                    data[key] = data[key].cuda()\n",
+    "                elif isinstance(data[key], dict):\n",
+    "                    for sub_key in data[key]:\n",
+    "                        if isinstance(data[key][sub_key], torch.Tensor):\n",
+    "                            data[key][sub_key] = data[key][sub_key].cuda()\n",
+    "            \n",
+    "            output = model(data)\n",
+    "            \n",
+    "            gt_image = data.get('image', data.get('img', None))\n",
+    "            gaussian_img = output['total_render_dict']['merge_img']\n",
+    "            neural_img = output['total_render_dict']['merge_img_pro']\n",
+    "            \n",
+    "            if gt_image is not None:\n",
+    "                comparison = torch.cat([gt_image, gaussian_img, neural_img], dim=0)\n",
+    "            else:\n",
+    "                comparison = torch.cat([gaussian_img, neural_img], dim=0)\n",
+    "            \n",
+    "            save_path = os.path.join(output_dir, f\"test_{idx:03d}.png\")\n",
+    "            save_image_grid(comparison, save_path, nrow=len(comparison))\n",
+    "            \n",
+    "            save_image_grid(neural_img, os.path.join(output_dir, f\"test_{idx:03d}_dit.png\"), nrow=1)\n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            print(f\"Error on sample {idx}: {e}\")\n",
+    "            continue\n",
+    "\n",
+    "print(f\"\\n✅ Generated images saved to: {output_dir}\")\n",
+    "print(f\"   Files: test_000.png, test_001.png, ...\")\n",
+    "\n",
+    "from google.colab import files\n",
+    "from IPython.display import display, Image as IPImage\n",
+    "\n",
+    "print(f\"\\nDisplaying first 3 samples:\")\n",
+    "for i in range(min(3, num_samples)):\n",
+    "    img_path = os.path.join(output_dir, f\"test_{i:03d}.png\")\n",
+    "    if os.path.exists(img_path):\n",
+    "        display(IPImage(filename=img_path))"
+   ]
   }
  ],
  "metadata": {
